Fix Java cookbooks