@@ -46,19 +46,15 @@
         <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <version>3.6.3</version>
         <configuration>
-            <fork>true</fork>
-            <mainClass>MessagingServiceApp</mainClass>
-            <jvmArgs>
-            <jvmArg>--enable-preview</jvmArg>
-            <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
-            <jvmArg>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</jvmArg>
-            </jvmArgs>
+            <executable>java</executable>
+            <arguments>
+            <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
+            <argument>-classpath</argument>
+            <classpath/>
+            <argument>MessagingServiceApp</argument>
+            </arguments>
         </configuration>
         </plugin>
     </plugins>
